.um.mutant_output17720
Picked up JAVA_TOOL_OPTIONS: -Duser.language=en
/Users/rainyd4y/projects/SAMutator/seeds/PMD_Validation/bestpractices_PrimitiveWrapperInstantiation/PrimitiveWrapperInstantiation2.java:4: error: class, interface, enum, or record expected
continue;
^
1 error
